--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 	<code id="code">
 		<print data="Hello, World!" />
+		<let name="a">10</let>
+		<print var="a" />
 	</code>
 
 	<script src="./tcml.js"></script>
