Added new keywords

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<code id="code">
-		<print data="Hello, World!" />
-		<let name="a">10</let>
-		<print var="a" />
+		<for var="i" from="0" to="10">
+		    <print ctx="i"></print>
+		</for>
 	</code>
 
 	<script src="./tcml.js"></script>
