--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
 	<code id="code">
-		<for var="i" from="0" to="10">
-		    <print ctx="i"></print>
-		</for>
+		<let name="hw">Hello, World!</let>
+		<print var="hw"></print>
 	</code>
 
 	<script src="./tcml.js"></script>
